# toolsandogh

./: .gitignore  .pre-commit-config.yaml  README.md  iscat-analysis.py  iscat-tool.py  pyproject.toml
src/toolsandogh/: __init__.py  _canonicalize_video.py  _generate_video.py  _load_video.py  _store_video.py  _validate_video.py
src/toolsandogh/io/: __init__.py  _generate_video.py  _load_video.py  _store_video.py  _verify.py
src/toolsandogh/localization/: _rvt.py
src/toolsandogh/scripts/: convert.py  iscat_analysis.py
src/toolsandogh/tests/: test_io.py  test_iscat_analysis.py  testfile.tiff
toolsandogh/: iscat_analysis.py
toolsandogh/tests/: conftest.py  test_iscat_analysis.py
