[project]
name = "toolsandogh"
version = "0.1.0"
description = "A collection of Python scripts for iSCAT microscopy data analysis"
authors = [{ name = "Marco Heisig", email = "marco.heisig@mpl.mpg.de" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "imgui[glfw,sdl2]",
    "fastplotlib[imgui]",
    "imageio[ffmpeg]",
    "numpy",
    "scipy",
    "scikit-image",
    "trackpy",
    "imgrvt",
    "tqdm",
    "bioio",
    "bioio-bioformats",
    "bioio-czi",
    "scipy",
    "scikit-image",
    "trackpy",
    "imgrvt",
    "tqdm",
    "imageio[ffmpeg]",
    "bioio",
    "bioio-bioformats",
    "bioio-czi",
    "bioio-dv",
    "bioio-imageio",
    "bioio-lif",
    "bioio-nd2",
    "bioio-ome-tiff",
    "bioio-ome-zarr",
    "bioio-sldy",
    "bioio-tifffile",
    "bioio-tiff-glob",
    "bioio-imageio>=1.2",
    "xarray",
    "dask",
]
keywords = ["tools", "utilities", "python"]

[dependency-groups]
dev = [
    "ruff",
 "pre-commit",
 "pyright",
 "pytest",
 "setuptools",
 "coverage",
 "ty>=0.0.1a15",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["toolsandogh"]


[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes errors
    "I",   # isort
    "C",   # Complexity
    "RET", # Retweet (flake8-retweet)
    "YTT", # Truthiness
    "TRY", # Try block errors
]
ignore = [
    "C901",   # Function too complex
    "E501",   # Line too long (handled by line-length)
    "E402",   # Module level import not at top of file (isort handles this)
    "TRY003", # Long message outside exception class
]
unfixable = ["F821"] # Don't try to fix name definition

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = true
reportUnusedImports = true
reportUnusedVariables = true
include = ["toolsandogh"]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["toolsandogh/tests"]

[tool.coverage.paths]
source = ["toolsandogh"]
